--- a/src/global.css
+++ b/src/global.css
@@ -24,8 +24,8 @@ form input {
   height: 60px;
   color: #333;
   border: 1px solid #dcdce6;
-  border-radius: 8px;
-  padding: 0 24px;
+  border-radius: 10px;
+  padding: 0 30px;
 }
 
 .button {
@@ -47,4 +47,24 @@ form input {
 
 .button:hover {
   color: #F9A229;
+}
+
+.linkGoAndBack {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  margin-top: 40px;
+  color: #41414d;
+  font-size: 18px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: 0.2s;
+}
+
+.linkGoAndBack svg {
+  margin-right: 8px;
+}
+
+.linkGoAndBack:hover {
+  opacity: 0.8;
 }
