--- a/src/pages/Termos/styles.css
+++ b/src/pages/Termos/styles.css
@@ -47,3 +47,10 @@
 .eula-container .content .article-title {
   margin-top: 60px;
 }
+
+.eula-container .content section {
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  overflow-x: hidden
+}
