--- a/src/pages/Termos/styles.css
+++ b/src/pages/Termos/styles.css
@@ -40,17 +40,17 @@
   margin-left: -50px;
 }
 
-.eula-container .content .article-title-top {
-  margin-top: 60px;
-}
-
-.eula-container .content .article-title {
-  margin-top: 60px;
+.eula-container .content .article-title  {
+  margin-top: 15px;
+  color: #F9A229;
 }
 
 .eula-container .content section {
-  height: 100%;
+  height: 90%;
   width: 100%;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
   overflow: scroll;
   overflow-x: hidden
 }
