--- a/src/pages/Eula/styles.css
+++ b/src/pages/Eula/styles.css
@@ -8,7 +8,10 @@
 
 .eula-container .content {
   width: 100%;
-  padding: 96px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  padding-left: 20px;
+  padding-right: 20px;
   background: #f0f0f5;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
@@ -40,7 +43,7 @@
   margin-left: -50px;
 }
 
-.eula-container .content .article-title  {
+.eula-container .content .article-title {
   margin-top: 15px;
   color: #F9A229;
 }
@@ -52,5 +55,5 @@
   border-radius: 10px;
   padding: 10px;
   overflow: scroll;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
