--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -15,10 +15,14 @@
 }
 
 .logon-container section.form form {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .logon-container section.form form h1 {
   font-size: 32px;
-  margin-bottom: 32px;
+  margin-bottom: 20px;
+}
+
+.logon-container form input+input {
+  margin-top: 8px;
 }
