--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -59,14 +59,21 @@
 }
 
 .register-container .content form .input-group input+input {
-  margin-left: 8px;
+  margin-left: 1px;
+  margin-right: -2px;
 }
 
 .register-container .content section .redAlert {
   color: rgb(235, 49, 32);
 }
 
-.orangeAlert {
+.register-container .content section .orangeAlert {
   text-decoration: none;
   color: #F9A229;
+}
+
+.register-container .content form label {
+  font-size: 16px;
+  margin-left: 8px;
+  font-weight: bold;
 }
