--- a/src/global.css
+++ b/src/global.css
@@ -28,6 +28,27 @@ form input {
   padding: 0 30px;
 }
 
+input:focus {
+  /*Aqui*/
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+form textarea {
+  width: 100%;
+  min-height: 180px;
+  resize: none;
+  color: #333;
+  border: 1px solid #dcdce6;
+  border-radius: 10px;
+  padding: 0 30px;
+  line-height: 25px;
+}
+
+textarea:focus {
+  /*Aqui*/
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
 .button {
   width: 100%;
   height: 60px;
@@ -73,4 +94,18 @@ form input {
 
 .upper-case {
   text-transform: uppercase;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #F0F0F5;
+  box-shadow: inset 0 0 6px #4d4b69;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #4d4b69;
 }
