--- a/src/pages/Budgets/styles.css
+++ b/src/pages/Budgets/styles.css
@@ -99,3 +99,23 @@
   line-height: 21px;
   font-size: 16px;
 }
+
+.centerItem {
+  text-align: center;
+}
+
+.aliginText {
+  text-align: center;
+  margin-bottom: 45px;
+}
+
+.margin-botton {
+  margin-bottom: 15px;
+}
+
+.emptyBudgetContainer {
+  position: absolute;
+  top: 260px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
