--- a/src/pages/Budgets/styles.css
+++ b/src/pages/Budgets/styles.css
@@ -119,3 +119,9 @@
   left: 50%;
   transform: translate(-50%, 0%);
 }
+
+/*------------------------------------------------------------*/
+
+@media (max-width: 960px) {
+  
+}
