--- a/src/pages/Newbudget/styles.css
+++ b/src/pages/Newbudget/styles.css
@@ -24,10 +24,25 @@
   transition: .5s;
 }
 
-.new-budget-container .content section .iten-panel {
+.new-budget-container .content section .item-panel {
   height: 400px;
   width: 500px;
   background-color: #fefefe;
+  border: 1px solid #E1E1EC;
+  overflow: auto;
+}
+
+.new-budget-container .content section .item-panel .item-panel-body{
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 1%;
+}
+
+
+.new-budget-container .content section .item-panel .item-panel-title {
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .new-budget-container .content .logo-register-newbudget {
@@ -59,27 +74,6 @@
   margin-bottom: -25px;
 }
 
-.new-budget-container .content section .iten-panel {
-  overflow: auto;
-}
-
-.new-budget-container .content section .iten-panel .list-iten {
-  display: flex;
-  flex-direction: row;
-  height: 50px;
-  margin: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(177, 174, 174);
-}
-
-.new-budget-container .content section .iten-panel .list-iten .list-text {
-  margin-left: 15px;
-  min-width: 360px;
-}
-
-
 /*--------------------------------------------*/
 
 @media (max-width: 1100px) {
@@ -99,7 +93,6 @@
   }
   .new-budget-container .content section {
     margin: 15px auto;
-    text-align: center;
     transition: .5s;
   }
   .new-budget-container .content form {
