--- a/src/global.css
+++ b/src/global.css
@@ -71,6 +71,38 @@ textarea:focus {
   background: #4d4b69;
 }
 
+.fitButton {
+  width: 100%;
+  height: 30px;
+  background: #F9A229;
+  border: 0;
+  border-radius: 0px 0px 10px 10px;
+  color: #fff;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 30px;
+  transition: 0.2s;
+  animation: shadow-pulse 1s 3;
+}
+
+.fitButton:hover {
+  color: #fff;
+  background: #4d4b69;
+  animation: shadow-pulse 1s infinite;
+}
+
+/*Animacao de sombra para o bot'ao fitButton*/
+
+@keyframes shadow-pulse {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    box-shadow: 0px 5px 5px 15px rgba(0, 0, 0, 0);
+  }
+}
+
 ul {
   list-style-type: none;
 }
