--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -48,6 +48,7 @@
   font-size: 32px;
   font-weight: 700;
   text-align: center;
+  color: #F9A229;
 }
 
 .waitText {
@@ -57,6 +58,7 @@
 
 .spanAttempts {
   color: #F9A229; 
+  font-weight: bold;
 }
 
 .waitAttemps {
