--- a/src/pages/Budgets/styles.css
+++ b/src/pages/Budgets/styles.css
@@ -48,6 +48,12 @@
   color: #e02041;
 }
 
+/*Alinha itens como o titulo de orcamentos*/
+
+.work-container .centerItem {
+  text-align: center;
+}
+
 .work-container h1 {
   margin-top: 80px;
   margin-bottom: 24px;
@@ -84,44 +90,46 @@
   color: #e02041;
 }
 
-.work-container ul li strong {
-  display: block;
-  margin-bottom: 16px;
-  color: #41414d;
-}
-
-.work-container ul li p+string {
-  margin-top: 32px;
-}
-
-.work-container ul li p {
-  color: #737380;
-  line-height: 21px;
-  font-size: 16px;
-}
-
-.centerItem {
-  text-align: center;
-}
-
-.aliginText {
-  text-align: center;
-  margin-bottom: 45px;
-}
-
-.margin-botton {
+.work-container .margin-botton {
   margin-bottom: 15px;
 }
 
-.emptyBudgetContainer {
+.work-container .emptyBudgetContainer {
   position: absolute;
   top: 260px;
   left: 50%;
-  transform: translate(-50%, 0%);
+  transform: translate(-40%, 0%);
 }
+
+.work-container .budget-user {
+  margin-bottom: 15px;
+}
+
+.work-container .budget-title {
+  margin-bottom: 15px;
+}
+
+.budget-footer {
+  display: flex;
+}
+.work-container section {
+  height: 120px;
+  width: 100%;
+  border: 1px solid black;
+  padding: 10px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
 
 /*------------------------------------------------------------*/
 
-@media (max-width: 960px) {
-  
+@media (max-width: 1160px) {
+  .work-container ul {
+    display: grid;
+    grid-template-columns: repeat(1, 5fr);
+    row-gap: 24px;
+    column-gap: 24px;
+    list-style: none;
+  }
 }
