--- a/src/pages/Budgets/styles.css
+++ b/src/pages/Budgets/styles.css
@@ -7,12 +7,15 @@
 
 .work-container header {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 .work-container header span {
   font-size: 20px;
-  margin-left: 24px;
+  margin-left: 0px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .work-container header img {
@@ -20,18 +23,22 @@
 }
 
 .work-container header a {
-  width: 360px;
-  margin-left: auto;
+  padding: 0;
+  margin: 0;
+}
+
+.work-container header .buttonContainer {
+  margin-left: 0px;
   margin-top: 0;
 }
 
 .work-container header button {
   height: 45px;
   width: 60px;
-  border-radius: 4px;
+  margin-left: auto;
+  border-radius: 8px;
   border: 1px solid #dcdce6;
   background: transparent;
-  margin-left: 16px;
   transition: border-color 0.2s;
 }
 
@@ -48,6 +55,27 @@
   color: #e02041;
 }
 
+header .buttonBudget {
+  width: 200px;
+  height: 40px;
+  display: inline-block;
+  background: #43415D;
+  border: 0;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: none;
+  line-height: 40px;
+  transition: 0.2s;
+}
+
+.buttonBudget:hover {
+  color: #F9A229;
+  background: #4d4b69;
+}
+
 /*Alinha itens como o titulo de orcamentos*/
 
 .work-container .centerItem {
@@ -55,7 +83,7 @@
 }
 
 .work-container h1 {
-  margin-top: 80px;
+  margin-top: 35px;
   margin-bottom: 24px;
 }
 
@@ -96,9 +124,14 @@
 
 .work-container .emptyBudgetContainer {
   position: absolute;
-  top: 260px;
-  left: 50%;
-  transform: translate(-40%, 0%);
+  left: 34%;
+  transform: translate(50%, 0%);
+}
+
+.homer {
+  position: absolute;
+  right: -50px;
+  margin-top: 30px;
 }
 
 .work-container .budget-user {
